--- a/views/index.html
+++ b/views/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timestamp Microservice</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+
+<html>
+   <head>
+      <title>Timestamp Microservice | freeCodeCamp.org</title>
+      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+      <link href="style.css" rel="stylesheet" type="text/css">
+   </head>
+
+   <body>
     <h1>Timestamp Microservice</h1>
-    <hr>
-    <h3>Example Usage:</h3><br>
-    <a href="http://localhost:3000/api/2015-12-25">[project url]/api/2015-12-25</a><br>
-    <a href="http://localhost:3000/api/1451001600000">[project url]/api/1451001600000</a>
-    <h3>Example Output:</h3><br>
-    <p>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</p>
-    <br>
-    <br>
-    <p>By Sayed</p>
-</body>
+    <hr />
+    <div class="container">
+      <h3>Example Usage:</h3>
+      <ul>
+        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
+        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
+      </ul>
+
+      <h3>Example Output:</h3>
+      <p>
+        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+      </p>
+    </div>
+    <div class="footer">
+      <p>
+        By Sayed
+      </p>
+    </div>
+  </body>
 </html>
